Fixed playback viewport sizing to prevent cutoff.
Also added window size defaults and auto sizing functionality.

--- a/spotify_infosuite/view/style.css
+++ b/spotify_infosuite/view/style.css
@@ -113,6 +113,18 @@ QLabel#frame_title {
     font-size: 16pt;
     /*text-decoration: underline;*/
 }
+QLabel#playback_title {
+    position: relative;
+    background-color: #0f0f0f;
+    text-align: center;
+    padding: 1px;
+    border-radius: 5%;
+    color: #25D34D;
+    /*font-weight: bold;*/
+    font-size: 15pt;
+    /*text-decoration: underline;*/
+}
+
 
 QLabel#frame_text, #bio_text, #lyrics_text, #frame_images {
     /*position: relative*/;
